Requested changes * Add ['success'] = true to returned objects for backwards compatibility * Modify document blocks in FolderController to reflect new return type * Update openapi.json and openapi.ts for same * Update ResponseDefinitions to specify optional 'success' field
