# openapi.json
@@ -182,6 +182,9 @@
                         "items": {
                             "$ref": "#/components/schemas/AclManage"
                         }
+                    },
+                    "success": {
+                        "type": "boolean"
                     }
                 }
             },
@@ -940,18 +943,7 @@
                                                     "$ref": "#/components/schemas/OCSMeta"
                                                 },
                                                 "data": {
-                                                    "type": "object",
-                                                    "required": [
-                                                        "success"
-                                                    ],
-                                                    "properties": {
-                                                        "success": {
-                                                            "type": "boolean",
-                                                            "enum": [
-                                                                true
-                                                            ]
-                                                        }
-                                                    }
+                                                    "$ref": "#/components/schemas/Folder"
                                                 }
                                             }
                                         }
